k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-service
spec:
  type: NodePort
  selector:
    app: portfolio
  ports:
  - port: 80
    targetPort: 3000
    nodePort: 30000
